2011-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppArmadillo-package.Rd: Updated to current version number,
	added Conrad's Technical Report as a reference

2011-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.34

	* inst/include/*: Upgraded to new release 2.4.2 of Armadillo
	* 

2011-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.33

	* inst/include/*: Upgraded to new release 2.4.1 of Armadillo

2011-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.32

	* inst/include/*: Upgraded to new release 2.4.0 of Armadillo

2011-11-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.31

	* inst/include/*: Upgraded to new test release 2.3.92 of Armadillo

2011-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.30

2011-11-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadilloSugar.h: reworked forwarding sugar
	expressions to arma expressions. No need for the "forward" function
	anymore. For now, we kept forward as a templated identity function
	for backwards compatibility but it is not needed anymore

	* inst/include/RcppArmadillo/Mat_meat.h: reworked handling of complex
	values

	* inst/unitTests/runit.RcppArmadillo.R: removed uses of forward as we
	don't need it anymore.

2011-11-16  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadilloForward.h: support for the new arma
	classes Gen and GenCube that arma uses internally

	* inst/include/RcppArmadilloWrap.h: idem

	* inst/include/RcppArmadillo/Mat_meat.h: adapted to the changed
	arma_type_check

2011-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/*: Upgraded to new test release 2.3.91 of Armadillo

2011-09-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.29

	* inst/include/*: Updated to bug-fix release 2.2.3 of Armadillo

2011-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.28
