@@ -1,3 +1,8 @@
+2011-12-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/unitTests/runTests.R: unit tests output 'fallback' directory
+	changed to '..' and files are now in top-level of $pkg.Rcheck/
+
 2011-12-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* man/RcppArmadillo-package.Rd: Updated to current version number,
@@ -8,7 +13,6 @@
 	* DESCRIPTION: Release 0.2.34
 
 	* inst/include/*: Upgraded to new release 2.4.2 of Armadillo
-	* 
 
 2011-12-07  Dirk Eddelbuettel  <edd@debian.org>
 
